--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -4209,6 +4209,8 @@
 
 			.banner > article img {
 				display: none;
+				align-self:bot;
+
 			}
 
 			.banner > article.visible {
@@ -4237,7 +4239,7 @@
 			.banner.full {
 				padding: 0;
 				min-height: 75vh;
-				height: 75vh !important;
+				height: 75vh 
 			}
 
 		}
@@ -4247,7 +4249,7 @@
 			.banner.full {
 				padding: 0;
 				min-height: 60vh;
-				height: 60vh !important;
+				height: 60vh;
 			}
 
 			.banner > article {
