--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -4010,7 +4010,6 @@
 	.banner {
 		background-color: #8a4680;
 		color: #e2d1df;
-		
 		position: relative;
 	}
 
@@ -4209,7 +4208,7 @@
 
 			.banner > article img {
 				display: none;
-				align-self:bot;
+				background-origin: padding-box;;
 
 			}
 
