--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -4009,6 +4009,7 @@
 
 	.banner {
 		background-color: #8a4680;
+		background-position: center 0px;
 		color: #e2d1df;
 		padding: 8em 0;
 		position: relative;
@@ -4209,6 +4210,7 @@
 
 			.banner > article img {
 				display: none;
+
 			}
 
 			.banner > article.visible {
