--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2048,7 +2048,7 @@
 		input[type="button"].special,
 		button.special,
 		.button.special {
-			background-color: #8a4680;
+			background-color: #363135;
 			color: #ffffff !important;
 		}
 
@@ -2057,7 +2057,7 @@
 			input[type="button"].special:hover,
 			button.special:hover,
 			.button.special:hover {
-				background-color: #9b4f90;
+				background-color:#635e63;
 			}
 
 			input[type="submit"].special:active,
@@ -2065,7 +2065,7 @@
 			input[type="button"].special:active,
 			button.special:active,
 			.button.special:active {
-				background-color: #793d70;
+				background-color: #140d13;
 			}
 
 /* Form */
