--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2597,10 +2597,6 @@
 		overflow-x: auto;
 	}
 
-	table {
-		margin: 0 0 2rem 0;
-		width: 100%;
-	}
 
 		table tbody tr {
 			border: solid 1px;
@@ -2676,6 +2672,30 @@
 	table.alt tbody tr td {
 		border-color: rgba(144, 144, 144, 0.25);
 	}
+
+		@media screen and (max-width: 1024px) {
+
+			table {
+		margin: 0 0 2rem 0;
+		width: 80%;
+		font-size: 7px;
+
+
+		
+	}
+
+		}
+
+
+		@media screen and (min-width: 1024px) {
+
+			table {
+		margin: 0 0 2rem 0;
+		width: 100%;
+
+}		
+	}
+
 
 /* Wrapper */
 
